syntax = "proto3";

option csharp_namespace = "WordleGameServer.Protos";


/*
 * Name: Logan McCallum Student Number: 1152955 Section: 2
 * Name: Spencer Martin Student Number: 1040415 Section: 2
 * Name: Ashley Burley-Denis Student Number: 0908968 Section: 1
 */

service DailyWordle 
{
	rpc Play (stream PlayRequest) returns (stream PlayReply);
	rpc GetStats (StatsRequest) returns (StatsReply);
}

message StatsRequest {}

message StatsReply 
{
	int32 playersCount = 1;
	int32 winnersPercent = 2;
	double averageGuesses = 3;
}
message PlayRequest
{
	string guess = 1;

}
message PlayReply
{
	string answer = 1;
	string wordOfTheDay = 2;
}